# client

./: .gitignore  LICENSE  NOTICE  README.md  README.rst  pyproject.toml  setup.py
daiquiri_client/: __init__.py  auth.py  client.py  metadata.py  query.py  tap.py
dqclient/: cli.py  metadata.py
examples/: update_metadata.py
